Edit Unitprices page to simple.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,19 @@
 <html>
 <head>
   <title>Tokumi</title>
+  <meta charset="utf-8">
+  <meta name="apple-mobile-web-app-capable" content="yes"/>  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+ 
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div data-role="page">
 
 <%= yield %>
 
+  </div>
 </body>
 </html>
