Add default value.

--- a/app/views/unitprices/index.html.erb
+++ b/app/views/unitprices/index.html.erb
@@ -9,7 +9,7 @@
         <input type="tel" id="add_price" data-mini="true" size="2" placeholder="250円" />
       </div>
       <div class="ui-block-b">
-        <input type="tel" id="add_amount" data-mini="true" maxlength="50" placeholder="50m" />
+        <input type="tel" id="add_amount" data-mini="true" maxlength="50" placeholder="27.5m" />
       </div>
       <div class="ui-block-c">
         <input type="tel" id="add_group" data-mini="true" maxlength="50" placeholder="12ロール" />
@@ -18,7 +18,7 @@
     <a data-role="button" id="add_button" data-mini="true">単価を計算する</a>
 
     </br>
-    <ul id="unit_list" data-role="listview"></ul>
+    <ul id="unit_list" data-role="listview" data-inset="true"></ul>
   </div>
 </div>
 
