Add Clear button.

--- a/app/views/unitprices/index.html.erb
+++ b/app/views/unitprices/index.html.erb
@@ -1,6 +1,7 @@
 <div data-role="page" id="unitprices_page">
   <div data-role="header">
     <h1>とくみちゃん</h1>
+    <a id="clear_button" data-icon="delete" class="ui-btn-right">Clear</a>
   </div>
 
   <div data-role="content">
@@ -17,7 +18,6 @@
     </div><!-- /grid-a -->
     <a data-role="button" id="add_button" data-mini="true">単価を計算する</a>
 
-    </br>
     <ul id="unit_list" data-role="listview" data-inset="true"></ul>
   </div>
 </div>
