Add delete icon.

--- a/app/views/unitprices/index.html.erb
+++ b/app/views/unitprices/index.html.erb
@@ -1,7 +1,7 @@
 <div data-role="page" id="unitprices_page">
   <div data-role="header">
     <h1>とくみちゃん</h1>
-    <a id="clear_button" class="ui-btn-right">Clear</a>
+    <a id="clear_button" class="ui-btn-right" data-icon="delete">Clear</a>
   </div>
 
   <div data-role="content">
