Add delete action with flick.

--- a/app/views/unitprices/index.html.erb
+++ b/app/views/unitprices/index.html.erb
@@ -1,7 +1,7 @@
 <div data-role="page" id="unitprices_page">
   <div data-role="header">
     <h1>とくみちゃん</h1>
-    <a id="clear_button" class="ui-btn-right" data-icon="delete">Clear</a>
+    <a id="clear_button" class="ui-btn-left" data-icon="delete">Clear</a>
   </div>
 
   <div data-role="content">
@@ -16,9 +16,9 @@
         <input type="tel" id="add_group" data-mini="true" maxlength="50" placeholder="12ロール" />
       </div>
     </div><!-- /grid-a -->
-    <a data-role="button" id="add_button" data-mini="true">単価を計算する</a>
+    <a data-role="button" id="add_button" data-mini="false">単価を計算する</a>
 
-    <ul id="unit_list" data-role="listview" data-inset="true"></ul>
+    <ul id="unit_list" data-role="listview" data-inset="true" data-split-icon="delete" data-split-theme="c"></ul>
   </div>
 </div>
 
