--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,25 +1,16 @@
-<h1>Listing products</h1>
+<div data-role="page" id="products_page">
+  <div data-role="header">
+    <h1>とくみちゃん</h1>
+  </div>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Rate</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+  <div data-role="content">
+    <ul id="product_list" data-role="listview" data-inset="false">
+      <% @products.each do |p| %>
+        <li>
+        <%= link_to p.name, product_path(p) %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
 
-<% @products.each do |product| %>
-  <tr>
-    <td><%= product.name %></td>
-    <td><%= product.rate %></td>
-    <td><%= link_to 'Show', product %></td>
-    <td><%= link_to 'Edit', edit_product_path(product) %></td>
-    <td><%= link_to 'Destroy', product, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Product', new_product_path %>
