--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,20 +1,20 @@
 <div data-role="page" id="unitprices_page">
   <div data-role="header">
     <h1><%= @product.name %></h1>
-    <%= link_to "商品一覧", products_path, :class => "ui-btn-left" %>
+    <%= link_to "商品一覧", products_path, :class => "ui-btn-left move-page" %>
     <a id="clear_button" class="ui-btn-right" data-icon="delete">Clear</a>
   </div>
 
   <div data-role="content">
     <div class="ui-grid-b">
       <div class="ui-block-a">
-        <input type="tel" id="add_price" data-mini="true" placeholder="250円" />
+        <input type="tel" id="add_price" data-mini="true" data-default="<%= @product.default_price %>" placeholder="<%= @product.default_price %>円" />
       </div>
       <div class="ui-block-b">
-        <input type="tel" id="add_amount" data-mini="true" data-unit="<%= @product.amount_unit %>" data-rate="<%= @product.rate %>" maxlength="50" placeholder="<%= @product.amount_unit %>" />
+        <input type="tel" id="add_amount" data-mini="true" data-unit="<%= @product.amount_unit %>" data-rate="<%= @product.rate %>" data-default="<%= @product.default_amount %>" maxlength="50" placeholder="<%= @product.default_amount.to_s + @product.amount_unit %>" />
       </div>
       <div class="ui-block-c">
-        <input type="tel" id="add_group" data-mini="true" data-unit="<%= @product.group_unit %>" maxlength="50" placeholder="<%= @product.group_unit %>" />
+        <input type="tel" id="add_group" data-mini="true" data-unit="<%= @product.group_unit %>" data-default="<%= @product.default_group %>" maxlength="50" placeholder="<%= @product.default_group.to_s + @product.group_unit %>" />
       </div>
     </div><!-- /grid-a -->
     <a data-role="button" id="add_button" data-mini="false">単価を計算する</a>
