Add validation for input form.

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<div data-role="page" id="unitprices_page">
+<div data-role="page" id="product_page">
   <div data-role="header">
     <h1><%= @product.name %></h1>
     <%= link_to "商品一覧", products_path, :class => "ui-btn-left move-page" %>
