Add the AddFormView.

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,7 +6,7 @@
   </div>
 
   <div data-role="content">
-    <div class="ui-grid-b">
+    <div class="ui-grid-b" id="add_form">
       <div class="ui-block-a">
         <input type="tel" id="add_price" data-mini="true" data-default="<%= @product.default_price %>" placeholder="<%= @product.default_price %>円" />
       </div>
