--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,7 +8,7 @@
   <div data-role="content">
     <div class="ui-grid-b" id="add_form">
       <div class="ui-block-a">
-        <input type="tel" id="add_price" data-mini="true" data-default="<%= @product.default_price %>" />
+        <input type="tel" id="add_price" data-mini="true" data-id="<%= @product.id %>" data-default="<%= @product.default_price %>" />
       </div>
       <div class="ui-block-b">
         <input type="tel" id="add_amount" data-mini="true" data-unit="<%= @product.amount_unit %>" data-rate="<%= @product.rate %>" data-default="<%= @product.default_amount %>" maxlength="50" />
